# Overhaul

./: Constants_8cpp_source.html  Doxyfile  Globals_8cpp_source.html  Globals_8h_source.html  README.md  WebSocketProtocol_8h_source.html  WebSocketServer_8h_source.html  annotated.html  classMissionControlInterface-members.html  classMissionControlInterface.html  classMissionControlInterface__coll__graph.md5  classMissionControlInterface__inherit__graph.map  classRover-members.html  classRover.html  classRover__coll__graph.map  classRover__coll__graph.md5  classes.html  classnet_1_1websocket_1_1SingleClientWSServer-members.html  classnet_1_1websocket_1_1SingleClientWSServer.html  classnet_1_1websocket_1_1WebSocketProtocol-members.html  classnet_1_1websocket_1_1WebSocketProtocol.html  classutil_1_1AsyncTask-members.html  classutil_1_1AsyncTask.html  classutil_1_1PeriodicScheduler-members.html  classutil_1_1PeriodicScheduler.html  classutil_1_1PeriodicTask-members.html  classutil_1_1PeriodicTask.html  classutil_1_1RAIIHelper-members.html  classutil_1_1RAIIHelper.html  classutil_1_1Watchdog-members.html  classutil_1_1Watchdog.html  classutil_1_1impl_1_1Notifiable-members.html  classutil_1_1impl_1_1Notifiable.html  classutil_1_1impl_1_1Notifiable__inherit__graph.map  classutil_1_1impl_1_1Notifiable__inherit__graph.md5  core_8h_source.html  dir_4a9b97872d7d9822c2a6ec851c14b054.html  dir_4a9b97872d7d9822c2a6ec851c14b054_dep.map  dir_4a9b97872d7d9822c2a6ec851c14b054_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+38 more)
.devcontainer/: Dockerfile  README.Docker.md  README.md  devcontainer.json
.github/workflows/: docs.yml
rover_ws/src/archive/: CMakeLists.txt
rover_ws/src/my_pkg/: package.xml
rover_ws/src/rover/: CMakeLists.txt
rover_ws/src/rover/src/: rover.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  namespaces_1.js  searchdata.js  typedefs_0.js
src/: Constants.cpp  Globals.h  Rover.cpp
src/rover/: CMakeLists.txt  package.xml
src/rover/can/: CAN.cpp
src/rover/mc/: WebSocketProtocol.cpp  WebSocketServer.cpp  WebSocketServer.h  mc.cpp
src/rover/src/: Globals.cpp  Globals.h  Rover.cpp
src/rover/utils/: core.h  scheduler.h
